# one-billion-row-challenge

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
benches/: benchmark_rayon_map_fold_reduce.rs  obrc_benchmarks.rs
resources/: results_1000000.txt
src/: lib.rs  main.rs
src/solutions/: rayon_map_fold_reduce.rs  solution_basic.rs  solution_naive.rs  solution_rayon_fxhash.rs  solver.rs
src/util/: hash.rs  rounding.rs
src/utils/: hash.rs  parsing.rs
