[package]
name = "obrc"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "obrc_benchmarks"
harness = false

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
rustc-hash = "2.0.0"